<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Months -->
    <string name="month_january">Январь</string>
    <string name="month_february">Февраль</string>
    <string name="month_march">Март</string>
    <string name="month_april">Апрель</string>
    <string name="month_may">Май</string>
    <string name="month_june">Июнь</string>
    <string name="month_july">Июль</string>
    <string name="month_august">Август</string>
    <string name="month_september">Сентябрь</string>
    <string name="month_october">Октябрь</string>
    <string name="month_november">Ноябрь</string>
    <string name="month_december">Декабрь</string>

    <!-- Days of week -->
    <string name="day_of_week_monday">пн</string>
    <string name="day_of_week_tuesday">вт</string>
    <string name="day_of_week_wednesday">ср</string>
    <string name="day_of_week_thursday">чт</string>
    <string name="day_of_week_friday">пт</string>
    <string name="day_of_week_saturday">сб</string>
    <string name="day_of_week_sunday">вс</string>

    <!-- Calendar -->
    <string name="calendar_month_title">%1$s %2$d</string>
    <string name="calendar_select_by_date_picker">Выбрать</string>

    <string name="ui_digit_1" translatable="false">1</string>
    <string name="ui_digit_2" translatable="false">2</string>
    <string name="ui_digit_3" translatable="false">3</string>
    <string name="ui_digit_4" translatable="false">4</string>
    <string name="ui_digit_5" translatable="false">5</string>
    <string name="ui_digit_6" translatable="false">6</string>
    <string name="ui_digit_7" translatable="false">7</string>
    <string name="ui_digit_8" translatable="false">8</string>
    <string name="ui_digit_9" translatable="false">9</string>
    <string name="ui_digit_0" translatable="false">0</string>

    <!-- Google play button -->
    <string name="google_play_button_add_into">Добавить в</string>
    <string name="google_play_button_pay">Pay</string>

    <!-- Slider -->
    <string name="admiral_slider_from">от</string>
    <string name="admiral_slider_to">до</string>

</resources>